unpackaged/main/default/objects/PaqueteEntrega__c/PaqueteEntrega__c.object-meta.xml
<CustomObject>
    <label>Paquete</label>
    <nameField>
        <label>Nombre del Paquete</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Paquetes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>