unpackaged/main/default/objects/PaqueteEntrega__c/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sin Estatus</fullName>
            </value>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Y</fullName>
                <label>Entregado</label>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>N</fullName>
                <label>Disponible</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>