unpackaged/main/default/objects/PaqueteEntrega__c/fields/FechaEntregaPaquete__c.field-meta.xml
<CustomField>
    <fullName>FechaEntregaPaquete__c</fullName>
    <label>Fecha Entrega del Paquete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>