unpackaged/main/default/objects/PaqueteEntrega__c/fields/FechaSolicitudPaquete__c.field-meta.xml
<CustomField>
    <fullName>FechaSolicitudPaquete__c</fullName>
    <label>Fecha de Solicitud del Paquete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>