unpackaged/main/default/objects/PaqueteEntrega__c/fields/TipoPaquete__c.field-meta.xml
<CustomField>
    <fullName>TipoPaquete__c</fullName>
    <label>Tipo de paquete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>